# word-flip

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  STRUCTURE.md  TASK.md
assets/: README.md
docker/: .env.example  README.md  docker-compose.yml
docs/: README.md
prototypes/: README.md  pukepai.html  wordflip-v2.html  wordflip-v3.html  wordflip-v4.html  wordflip-v5.html
scripts/: README-wordflip-v2.md  git-submit.ps1  rebuild-wordflip-v2.ps1  smoke-wordflip-v2.ps1
tools/content-pipeline/: .gitignore  README.md  manifest.json  overrides.example.json  pyproject.toml
tools/content-pipeline/src/wordflip_content/: __init__.py  __main__.py  build.py  cli.py  download.py  manifest.py  publish.py  verify.py
tools/content-pipeline/tests/: test_pipeline.py
tools/word-lexicon-cleaner/: .env.example  .gitignore  README.md  pyproject.toml
tools/word-lexicon-cleaner/src/word_lexicon_cleaner/: __init__.py  __main__.py  attach_tatoeba.py  cli.py  ecdict.py  emit.py  emit_concise.py  export_mysql.py  gen_flyway_seed.py  import_wiktionary.py  import_wordnet.py  io_jsonl.py  learning_primary.py  llm.py  models.py  overlay_ecdict.py  report.py  reselect_mysql.py  rules.py  validate.py
tools/word-lexicon-cleaner/tests/: test_ecdict.py  test_learning_primary.py  test_llm.py  test_rules_golden.py
tools/word-lexicon-cleaner/tests/fixtures/: golden.jsonl
wordflip-android/: AGENTS.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
wordflip-api/: AGENTS.md  README.md  openapi.yaml
wordflip-server/: .gitignore  AGENTS.md  README.md  pom.xml
(+509 files in other folders)
