[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wordflip-content-pipeline"
version = "0.1.0"
description = "WordFlip 可复现词典内容管线"
requires-python = ">=3.10"

[project.scripts]
wordflip-content = "wordflip_content.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
