[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "word-lexicon-cleaner"
version = "0.1.0"
description = "WordFlip 离线词库规则清洗 + 可选 LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
mysql = ["pymysql>=1.1"]

[project.scripts]
word-lexicon-cleaner = "word_lexicon_cleaner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
